# docs/swagger.json
@@ -217,6 +217,9 @@
                     }
                 ],
                 "description": "Create barerToken.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -226,13 +229,25 @@
                 "summary": "Create Photo.",
                 "parameters": [
                     {
-                        "description": "the body to Create a new Photo",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.InputPhotos"
-                        }
+                        "type": "string",
+                        "description": "title data",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "file Image Url",
+                        "name": "photo_url",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "caption data",
+                        "name": "caption",
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -260,6 +275,9 @@
                     }
                 ],
                 "description": "Update Photo by id.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -269,19 +287,31 @@
                 "summary": "Update Photo.",
                 "parameters": [
                     {
-                        "description": "the body to update a new Photo",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.InputPhotos"
-                        }
-                    },
-                    {
                         "type": "string",
                         "description": "Photo id",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "title data",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "file Image Url",
+                        "name": "photo_url",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "caption data",
+                        "name": "caption",
+                        "in": "formData",
                         "required": true
                     },
                     {
@@ -489,7 +519,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Photo id",
+                        "description": "SocialMedia id",
                         "name": "id",
                         "in": "path",
                         "required": true
