# handler/photo.go
@@ -5,6 +5,7 @@ import (
 	"FinalProjectGolangH8/photo"
 	"FinalProjectGolangH8/user"
 	"FinalProjectGolangH8/utils"
+	"fmt"
 	"net/http"
 	"strconv"
 
@@ -53,6 +54,59 @@ func (h *photoHandler) CreatePhoto(c *gin.Context) {
 	c.JSON(http.StatusCreated, domain.FormatPhotoOutputCreate(photo))
 }
 
+// Create godoc
+// @Summary Create Photo.
+// @Description Create barerToken.
+// @Tags Photos
+// @Accept  multipart/form-data
+// @Produce json
+// @Param   title formData string true  "title data"
+// @Param   photo_url formData file true  "file Image Url"
+// @Param   caption formData string true  "caption data"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Success 201 {object} domain.PhotoOutputCreate
+// @Router /photos [post]
+func (h *photoHandler) CreatePhotoSendCloud(c *gin.Context) {
+	var input domain.InputPhotosCloud
+	if err := c.ShouldBind(&input); err != nil {
+		errors := utils.FormatVlidationError(err)
+		errorMessage := gin.H{"errors": errors}
+		c.JSON(http.StatusUnprocessableEntity, errorMessage)
+	}
+	file, _, err := c.Request.FormFile("photo_url")
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, err.Error())
+		return
+	}
+	fileTake, err := c.FormFile("photo_url")
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, err.Error())
+		return
+	}
+	fileRespondCloud, err := utils.SendImageToCloud(file, fileTake.Filename)
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, err.Error())
+		return
+	}
+	var inputCreate domain.InputPhotos
+	inputCreate.Photo_url = fmt.Sprintf("%v", fileRespondCloud["url"])
+	inputCreate.Title = input.Title
+	inputCreate.Caption = input.Caption
+	user, err := h.userService.GetUserByID(c.MustGet("currentUser").(domain.User).ID)
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, err.Error())
+		return
+	}
+	photo, err := h.photoService.CreatePhoto(inputCreate, user.ID)
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, err.Error())
+		return
+	}
+	c.JSON(http.StatusCreated, domain.FormatPhotoOutputCreate(photo))
+
+}
+
 // Get All  godoc
 // @Summary Get All photo.
 // @Description Create barerToken.
@@ -94,6 +148,55 @@ func (h *photoHandler) PutPhoto(c *gin.Context) {
 	}
 	intVar, _ := strconv.Atoi(c.Param("id"))
 	photo, err := h.photoService.PutPhoto(input, intVar)
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, err.Error())
+		return
+	}
+	c.JSON(http.StatusOK, domain.FormatPhotoOutputCreate(photo))
+}
+
+// UpdatePhoto godoc
+// @Summary Update Photo.
+// @Description Update Photo by id.
+// @Tags Photos
+// @Accept  multipart/form-data
+// @Produce json
+// @Param id path string true "Photo id"
+// @Param   title formData string true  "title data"
+// @Param   photo_url formData file true  "file Image Url"
+// @Param   caption formData string true  "caption data"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Success 200 {object} domain.Photo
+// @Router /photos/{id} [put]
+func (h *photoHandler) PutPhotoImage(c *gin.Context) {
+	var input domain.InputPhotosCloud
+	if err := c.ShouldBind(&input); err != nil {
+		errors := utils.FormatVlidationError(err)
+		errorMessage := gin.H{"errors": errors}
+		c.JSON(http.StatusUnprocessableEntity, errorMessage)
+	}
+	file, _, err := c.Request.FormFile("photo_url")
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, err.Error())
+		return
+	}
+	fileTake, err := c.FormFile("photo_url")
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, err.Error())
+		return
+	}
+	fileRespondCloud, err := utils.SendImageToCloud(file, fileTake.Filename)
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, err.Error())
+		return
+	}
+	var inputPut domain.InputPhotos
+	inputPut.Photo_url = fmt.Sprintf("%v", fileRespondCloud["url"])
+	inputPut.Title = input.Title
+	inputPut.Caption = input.Caption
+	intVar, _ := strconv.Atoi(c.Param("id"))
+	photo, err := h.photoService.PutPhoto(inputPut, intVar)
 	if err != nil {
 		c.JSON(http.StatusUnprocessableEntity, err.Error())
 		return
